<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollCadastroVeiculo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CadastroVeiculoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_apelido" />

        <EditText
            android:id="@+id/etApelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_modelo" />

        <EditText
            android:id="@+id/etModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_km_atual" />

        <EditText
            android:id="@+id/etKmAtual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_marca" />

        <Spinner
            android:id="@+id/spMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/marcas_veiculo"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_combustivel" />

        <RadioGroup
            android:id="@+id/rgCombustivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbGasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_gasolina" />

            <RadioButton
                android:id="@+id/rbEtanol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_etanol" />

            <RadioButton
                android:id="@+id/rbDiesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_diesel" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/cbEmUso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/checkbox_em_uso" />

    </LinearLayout>

</ScrollView>
